[package]
name = "forkheap"
version = "0.1.0"
edition = "2021"

description = "An allocator suitable for sharing heaps between forked processes on Linux."
repository = "https://github.com/addisoncrump/forkheap.git"

license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
linked_list_allocator = { version = "0.10", default-features = false, features = ["alloc_ref"] }
spin = "0.9.8"
sysinfo = { version =  "0.30", default-features = false }
